--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,43 @@ body {
     .navbar .navbar-brand.active:hover::before {
       content: url(../img/logo.svg); }
 
+/****** FOOTER STYLES ******/
+footer:hover a {
+  color: #C6884F;
+  text-decoration: none;
+  -webkit-transition: all 200ms linear;
+  -moz-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
+  -ms-transition: all 200ms linear;
+  transition: all 200ms linear; }
+
+footer:hover hr {
+  border-color: #C6884F !important;
+  text-decoration: none;
+  -webkit-transition: all 200ms linear;
+  -moz-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
+  -ms-transition: all 200ms linear;
+  transition: all 200ms linear; }
+
+footer a {
+  color: #9d9d9d;
+  text-decoration: none;
+  -webkit-transition: all 200ms linear;
+  -moz-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
+  -ms-transition: all 200ms linear;
+  transition: all 200ms linear; }
+
+footer hr {
+  border-color: #9d9d9d;
+  text-decoration: none;
+  -webkit-transition: all 200ms linear;
+  -moz-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
+  -ms-transition: all 200ms linear;
+  transition: all 200ms linear; }
+
 /****** CONTENT STYLES ******/
 .page-container {
   margin-top: 60px; }
