--- a/css/main.scss
+++ b/css/main.scss
@@ -97,6 +97,12 @@ body
         align-items: center;
         justify-content: center;
 
+        // img
+        // {
+        //     max-height: 100%;
+        //     margin-right: 8px;
+        // }
+
         &::before
         {
             content: url(../img/logo.svg);
@@ -237,4 +243,18 @@ textarea
 .scope-select
 {
     display: none;
+}
+
+#details-container
+{
+    h2
+    {
+        min-height: 50vh;
+        color: white;
+    }
+
+    li a
+    {
+        color: $ltgrey;
+    }
 }
