--- a/css/main.css
+++ b/css/main.css
@@ -141,5 +141,22 @@ textarea {
   min-height: 50vh;
   color: white; }
 
-#details-container li a {
-  color: #9d9d9d; }
+.nav-pills > li.active > a:focus, .nav-pills > li.active > a:hover {
+  background: #080808;
+  -webkit-transition: all 200ms linear;
+  -moz-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
+  -ms-transition: all 200ms linear;
+  transition: all 200ms linear; }
+
+.nav-pills > li.active > a {
+  background-color: #080808;
+  color: #51b6c3 !important;
+  border-radius: 0; }
+
+.nav-pills > li > a {
+  color: #9d9d9d;
+  border-radius: 0; }
+  .nav-pills > li > a:hover {
+    color: #51b6c3;
+    background-color: transparent; }
