--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,7 @@ $ltgrey: #9d9d9d;
 {
     color: $black;
 }
+
 .text-trueblack
 {
     color: $trublack;
@@ -252,9 +253,32 @@ textarea
         min-height: 50vh;
         color: white;
     }
+}
 
-    li a
+.nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover
+{
+    background: $trublack;
+    -webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    -ms-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
+.nav-pills>li.active>a
+{
+    background-color: $trublack;
+    color: $blue!important;
+    border-radius: 0;
+}
+
+.nav-pills>li>a
+{
+    color: $ltgrey;
+    border-radius: 0;
+    &:hover
     {
-        color: $ltgrey;
+        color: $blue;
+        background-color: rgba(0,0,0,0);
     }
 }
