--- a/css/main.css
+++ b/css/main.css
@@ -34,68 +34,65 @@ body {
     border-color: #9d9d9d; }
 
 /****** NAVBAR STYLES ******/
-.navbar .navbar-right a {
-  -webkit-transition: all 200ms linear;
-  -moz-transition: all 200ms linear;
-  -o-transition: all 200ms linear;
-  -ms-transition: all 200ms linear;
-  transition: all 200ms linear; }
-
-.navbar .navbar-right a:hover {
-  color: #C6884F !important;
-  -webkit-transition: all 200ms linear;
-  -moz-transition: all 200ms linear;
-  -o-transition: all 200ms linear;
-  -ms-transition: all 200ms linear;
-  transition: all 200ms linear; }
-
-.navbar li.active a {
-  color: #C6884F !important; }
-
-.navbar .navbar-brand.active a {
-  color: #D85360; }
-
-.navbar .navbar-brand {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #9d9d9d;
-  -webkit-transition: all 200ms linear;
-  -moz-transition: all 200ms linear;
-  -o-transition: all 200ms linear;
-  -ms-transition: all 200ms linear;
-  transition: all 200ms linear; }
-  .navbar .navbar-brand::before {
-    content: url(../img/logo.svg);
-    margin-right: 8px; }
-  .navbar .navbar-brand:hover {
-    color: #D85360 !important;
+.navbar {
+  z-index: 2; }
+  .navbar .navbar-right a {
     -webkit-transition: all 200ms linear;
     -moz-transition: all 200ms linear;
     -o-transition: all 200ms linear;
     -ms-transition: all 200ms linear;
     transition: all 200ms linear; }
-    .navbar .navbar-brand:hover::before {
+  .navbar .navbar-right a:hover {
+    color: #C6884F !important;
+    -webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    -ms-transition: all 200ms linear;
+    transition: all 200ms linear; }
+  .navbar li.active a {
+    color: #C6884F !important; }
+  .navbar .navbar-brand.active a {
+    color: #D85360; }
+  .navbar .navbar-brand {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #9d9d9d;
+    -webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    -ms-transition: all 200ms linear;
+    transition: all 200ms linear; }
+    .navbar .navbar-brand::before {
+      content: url(../img/logo.svg);
+      margin-right: 8px; }
+    .navbar .navbar-brand:hover {
+      color: #D85360 !important;
+      -webkit-transition: all 200ms linear;
+      -moz-transition: all 200ms linear;
+      -o-transition: all 200ms linear;
+      -ms-transition: all 200ms linear;
+      transition: all 200ms linear; }
+      .navbar .navbar-brand:hover::before {
+        content: url(../img/logo_high.svg); }
+  .navbar .navbar-brand.active {
+    color: #D85360;
+    -webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    -ms-transition: all 200ms linear;
+    transition: all 200ms linear; }
+    .navbar .navbar-brand.active::before {
       content: url(../img/logo_high.svg); }
-
-.navbar .navbar-brand.active {
-  color: #D85360;
-  -webkit-transition: all 200ms linear;
-  -moz-transition: all 200ms linear;
-  -o-transition: all 200ms linear;
-  -ms-transition: all 200ms linear;
-  transition: all 200ms linear; }
-  .navbar .navbar-brand.active::before {
-    content: url(../img/logo_high.svg); }
-  .navbar .navbar-brand.active:hover {
-    color: #9d9d9d !important;
-    -webkit-transition: all 200ms linear;
-    -moz-transition: all 200ms linear;
-    -o-transition: all 200ms linear;
-    -ms-transition: all 200ms linear;
-    transition: all 200ms linear; }
-    .navbar .navbar-brand.active:hover::before {
-      content: url(../img/logo.svg); }
+    .navbar .navbar-brand.active:hover {
+      color: #9d9d9d !important;
+      -webkit-transition: all 200ms linear;
+      -moz-transition: all 200ms linear;
+      -o-transition: all 200ms linear;
+      -ms-transition: all 200ms linear;
+      transition: all 200ms linear; }
+      .navbar .navbar-brand.active:hover::before {
+        content: url(../img/logo.svg); }
 
 /****** FOOTER STYLES ******/
 footer:hover a {
@@ -150,6 +147,18 @@ textarea {
 .scope-select {
   display: none; }
 
+/****** HOME PAGE STYLES ******/
+.share-overlay {
+  display: none;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.9); }
+
+/****** DETAILS PAGE STYLES ******/
 #details-container {
   padding-top: 80px; }
   #details-container h2 {
