--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ body {
 
 /****** NAVBAR STYLES ******/
 .navbar {
-  z-index: 2; }
+  z-index: 1; }
   .navbar .navbar-right a {
     -webkit-transition: all 200ms linear;
     -moz-transition: all 200ms linear;
@@ -140,6 +140,12 @@ textarea {
   max-width: 100%;
   background-color: #2f2f2f;
   border-color: #080808; }
+
+.form-group.has-error textarea {
+  border-color: #D85360; }
+
+.error-block {
+  display: none; }
 
 .btn-success {
   min-width: 100%; }
