--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,26 @@
   font-size: 2em;
   font-family: 'Archivo Black', sans-serif; }
 
+.hover-ltgrey:hover {
+  color: #9d9d9d !important; }
+
+.hover-red:hover {
+  color: #D85360 !important; }
+
+a {
+  -webkit-transition: all 200ms linear;
+  -moz-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
+  -ms-transition: all 200ms linear;
+  transition: all 200ms linear; }
+  a:hover {
+    text-decoration: none;
+    -webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    -ms-transition: all 200ms linear;
+    transition: all 200ms linear; }
+
 /****** BODY ******/
 body {
   font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier;
@@ -36,19 +56,8 @@ body {
 /****** NAVBAR STYLES ******/
 .navbar {
   z-index: 1; }
-  .navbar .navbar-right a {
-    -webkit-transition: all 200ms linear;
-    -moz-transition: all 200ms linear;
-    -o-transition: all 200ms linear;
-    -ms-transition: all 200ms linear;
-    transition: all 200ms linear; }
   .navbar .navbar-right a:hover {
-    color: #C6884F !important;
-    -webkit-transition: all 200ms linear;
-    -moz-transition: all 200ms linear;
-    -o-transition: all 200ms linear;
-    -ms-transition: all 200ms linear;
-    transition: all 200ms linear; }
+    color: #C6884F !important; }
   .navbar li.active a {
     color: #C6884F !important; }
   .navbar .navbar-brand.active a {
@@ -76,33 +85,18 @@ body {
       .navbar .navbar-brand:hover::before {
         content: url(../img/logo_high.svg); }
   .navbar .navbar-brand.active {
-    color: #D85360;
-    -webkit-transition: all 200ms linear;
-    -moz-transition: all 200ms linear;
-    -o-transition: all 200ms linear;
-    -ms-transition: all 200ms linear;
-    transition: all 200ms linear; }
+    color: #D85360; }
     .navbar .navbar-brand.active::before {
       content: url(../img/logo_high.svg); }
     .navbar .navbar-brand.active:hover {
-      color: #9d9d9d !important;
-      -webkit-transition: all 200ms linear;
-      -moz-transition: all 200ms linear;
-      -o-transition: all 200ms linear;
-      -ms-transition: all 200ms linear;
-      transition: all 200ms linear; }
+      color: #9d9d9d !important; }
       .navbar .navbar-brand.active:hover::before {
         content: url(../img/logo.svg); }
 
 /****** FOOTER STYLES ******/
 footer:hover a {
   color: #C6884F;
-  text-decoration: none;
-  -webkit-transition: all 200ms linear;
-  -moz-transition: all 200ms linear;
-  -o-transition: all 200ms linear;
-  -ms-transition: all 200ms linear;
-  transition: all 200ms linear; }
+  text-decoration: none; }
 
 footer:hover hr {
   border-color: #C6884F !important;
@@ -115,12 +109,7 @@ footer:hover hr {
 
 footer a {
   color: #9d9d9d;
-  text-decoration: none;
-  -webkit-transition: all 200ms linear;
-  -moz-transition: all 200ms linear;
-  -o-transition: all 200ms linear;
-  -ms-transition: all 200ms linear;
-  transition: all 200ms linear; }
+  text-decoration: none; }
 
 footer hr {
   border-color: #9d9d9d;
