--- a/css/main.scss
+++ b/css/main.scss
@@ -44,10 +44,27 @@ $ltgrey: #9d9d9d;
     color: $ltgrey;
 }
 
+
 .title
 {
     font-size: 2em;
     font-family: 'Archivo Black', sans-serif;
+}
+
+.hover-ltgrey
+{
+    &:hover
+    {
+        color: $ltgrey!important;
+    }
+}
+
+.hover-red
+{
+    &:hover
+    {
+        color: $red!important;
+    }
 }
 
 a
@@ -60,6 +77,7 @@ a
 
     &:hover
     {
+        text-decoration: none;
         -webkit-transition: all 200ms linear;
         -moz-transition: all 200ms linear;
         -o-transition: all 200ms linear;
