Migration to Bootstrap 4

--- a/css/main.scss
+++ b/css/main.scss
@@ -309,10 +309,10 @@ textarea
     display: none;
 }
 
-.btn-success
-{
-    min-width: 100%;
-}
+// .btn-success
+// {
+//     min-width: 100%;
+// }
 
 .scope-select
 {
@@ -322,10 +322,10 @@ textarea
 /****** HOME PAGE STYLES ******/
 #home-container
 {
-    .row:first-of-type
-    {
-        min-height: 100vh;
-    }
+    // .row:first-of-type
+    // {
+    //     min-height: 100vh;
+    // }
 }
 .share-overlay
 {
