--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,9 @@
 .back-ltgrey {
   background-color: #9d9d9d; }
 
+.back-black {
+  background-color: #222; }
+
 .title {
   font-size: 2em;
   font-family: 'Archivo Black', sans-serif; }
@@ -110,18 +113,19 @@ footer:hover hr {
   -ms-transition: all 200ms linear;
   transition: all 200ms linear; }
 
-footer a {
-  color: #9d9d9d;
-  text-decoration: none; }
-
-footer hr {
-  border-color: #9d9d9d;
-  text-decoration: none;
-  -webkit-transition: all 200ms linear;
-  -moz-transition: all 200ms linear;
-  -o-transition: all 200ms linear;
-  -ms-transition: all 200ms linear;
-  transition: all 200ms linear; }
+footer {
+  margin-top: 60px; }
+  footer a {
+    color: #9d9d9d;
+    text-decoration: none; }
+  footer hr {
+    border-color: #9d9d9d;
+    text-decoration: none;
+    -webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    -ms-transition: all 200ms linear;
+    transition: all 200ms linear; }
 
 /****** CONTENT STYLES ******/
 .page-container {
@@ -160,7 +164,10 @@ textarea {
 #details-container .details-section {
   margin-bottom: 60px; }
 
-.nav-pills > li.active > a:focus, .nav-pills > li.active > a:hover {
+.sticky-top {
+  top: 140px; }
+
+.flex-column .active:focus, .flex-column .active:hover {
   background: #080808;
   -webkit-transition: all 200ms linear;
   -moz-transition: all 200ms linear;
@@ -168,15 +175,15 @@ textarea {
   -ms-transition: all 200ms linear;
   transition: all 200ms linear; }
 
-.nav-pills > li.active > a {
+.flex-column .active {
   background-color: #080808;
   color: #51b6c3 !important;
   border-radius: 0; }
 
-.nav-pills > li > a {
+.flex-column a {
   color: #9d9d9d;
   border-radius: 0; }
-  .nav-pills > li > a:hover {
+  .flex-column a:hover {
     color: #51b6c3;
     background-color: transparent; }
 
