--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,18 @@
 .back-black {
   background-color: #222; }
 
+.btn-yellow {
+  background-color: #C6884F;
+  background: #84562b;
+  border-color: #C6884F; }
+  .btn-yellow.active, .btn-yellow:active {
+    background-color: #C6884F !important;
+    border-color: #C6884F !important;
+    box-shadow: 0 0 0 0.2rem rgba(198, 136, 79, 0.7) !important; }
+  .btn-yellow:hover {
+    background-color: #C6884F;
+    border-color: #C6884F; }
+
 .format {
   display: none; }
 
@@ -63,44 +75,46 @@ body {
     color: #9d9d9d; }
 
 /****** NAVBAR STYLES ******/
-.navbar {
-  z-index: 1; }
-  .navbar .navbar-right a:hover {
-    color: #C6884F !important; }
-  .navbar li.active a {
-    color: #C6884F !important; }
-  .navbar .navbar-brand.active a {
-    color: #D85360; }
-  .navbar .navbar-brand {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #9d9d9d;
+.navbar .navbar-right a:hover {
+  color: #C6884F !important; }
+
+.navbar li.active a {
+  color: #C6884F !important; }
+
+.navbar .navbar-brand.active a {
+  color: #D85360; }
+
+.navbar .navbar-brand {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #9d9d9d;
+  -webkit-transition: all 200ms linear;
+  -moz-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
+  -ms-transition: all 200ms linear;
+  transition: all 200ms linear; }
+  .navbar .navbar-brand::before {
+    content: url(../img/logo.svg);
+    margin-right: 8px; }
+  .navbar .navbar-brand:hover {
+    color: #D85360 !important;
     -webkit-transition: all 200ms linear;
     -moz-transition: all 200ms linear;
     -o-transition: all 200ms linear;
     -ms-transition: all 200ms linear;
     transition: all 200ms linear; }
-    .navbar .navbar-brand::before {
-      content: url(../img/logo.svg);
-      margin-right: 8px; }
-    .navbar .navbar-brand:hover {
-      color: #D85360 !important;
-      -webkit-transition: all 200ms linear;
-      -moz-transition: all 200ms linear;
-      -o-transition: all 200ms linear;
-      -ms-transition: all 200ms linear;
-      transition: all 200ms linear; }
-      .navbar .navbar-brand:hover::before {
-        content: url(../img/logo_high.svg); }
-  .navbar .navbar-brand.active {
-    color: #D85360; }
-    .navbar .navbar-brand.active::before {
+    .navbar .navbar-brand:hover::before {
       content: url(../img/logo_high.svg); }
-    .navbar .navbar-brand.active:hover {
-      color: #9d9d9d !important; }
-      .navbar .navbar-brand.active:hover::before {
-        content: url(../img/logo.svg); }
+
+.navbar .navbar-brand.active {
+  color: #D85360; }
+  .navbar .navbar-brand.active::before {
+    content: url(../img/logo_high.svg); }
+  .navbar .navbar-brand.active:hover {
+    color: #9d9d9d !important; }
+    .navbar .navbar-brand.active:hover::before {
+      content: url(../img/logo.svg); }
 
 /****** FOOTER STYLES ******/
 footer:hover a {
@@ -140,16 +154,27 @@ textarea {
   background-color: #2f2f2f;
   border-color: #080808; }
 
+input {
+  min-width: 100%;
+  max-width: 100%;
+  background-color: #2f2f2f;
+  border-color: #080808;
+  border-width: 1px;
+  border-radius: 4px; }
+
 .form-group.has-error textarea {
   border-color: #D85360; }
 
 .error-block {
   display: none; }
 
-.scope-select {
+/****** HOME PAGE STYLES ******/
+#migration-container .scope-select {
   display: none; }
 
-/****** HOME PAGE STYLES ******/
+#conversion-container {
+  display: none; }
+
 .share-overlay {
   display: none;
   position: absolute;
