--- a/css/main.scss
+++ b/css/main.scss
@@ -70,6 +70,27 @@ $ltgrey: #9d9d9d;
     background-color: $black;
 }
 
+.btn-yellow
+{
+    background-color: $yellow;
+    background: darken($yellow, 20%);
+    border-color: $yellow;
+
+    &.active, &:active
+    {
+        background-color: $yellow!important;
+        border-color: $yellow!important;
+        box-shadow: 0 0 0 .2rem rgba( $yellow, .7 )!important;
+    }
+
+
+    &:hover
+    {
+        background-color: $yellow;
+        border-color: $yellow;
+    }
+}
+
 .format
 {
     display: none;
@@ -119,7 +140,7 @@ body
 /****** NAVBAR STYLES ******/
 .navbar
 {
-    z-index: 1;
+    // z-index: 3; // above all elements and button groups
 
     .navbar-right a:hover
     {
@@ -282,6 +303,17 @@ textarea
     border-color: $trublack;
 }
 
+input
+{
+    min-width: 100%;
+    max-width: 100%;
+
+    background-color: lighten($black, 5%);
+    border-color: $trublack;
+    border-width: 1px;
+    border-radius: 4px;
+}
+
 .form-group.has-error
 {
     textarea
@@ -301,18 +333,15 @@ textarea
 //     min-width: 100%;
 // }
 
-.scope-select
+
+/****** HOME PAGE STYLES ******/
+#migration-container .scope-select
 {
     display: none;
 }
-
-/****** HOME PAGE STYLES ******/
-#home-container
+#conversion-container
 {
-    // .row:first-of-type
-    // {
-    //     min-height: 100vh;
-    // }
+    display: none;
 }
 .share-overlay
 {
