--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ body {
   -ms-transition: all 200ms linear;
   transition: all 200ms linear; }
   .navbar .navbar-brand::before {
-    content: url(../img/logo.svg);
+    content: url(../img/snip_logo.svg);
     margin-right: 8px; }
   .navbar .navbar-brand:hover {
     color: #D85360 !important;
@@ -108,16 +108,16 @@ body {
     -ms-transition: all 200ms linear;
     transition: all 200ms linear; }
     .navbar .navbar-brand:hover::before {
-      content: url(../img/logo_high.svg); }
+      content: url(../img/snip_logo_high.svg); }
 
 .navbar .navbar-brand.active {
   color: #D85360; }
   .navbar .navbar-brand.active::before {
-    content: url(../img/logo_high.svg); }
+    content: url(../img/snip_logo_high.svg); }
   .navbar .navbar-brand.active:hover {
     color: #9d9d9d !important; }
     .navbar .navbar-brand.active:hover::before {
-      content: url(../img/logo.svg); }
+      content: url(../img/snip_logo.svg); }
 
 /****** FOOTER STYLES ******/
 footer:hover a {
